# mortalsim

./: .gitignore  Cargo.toml  README.md  mortalsim.code-workspace
config/: anatomy_writer.js  circulation.tpl  circulation_writer.js  package-lock.json  package.json  substances.yaml
config/circulation/: human_circulation.json
config/human/: anatomy.yaml  circulation.yaml  closed_circulation.yaml  nervous_system.yaml
config/test/: anatomy.yaml  circulation.yaml  nervous_system.yaml
mortalsim/: Cargo.toml  README.md
mortalsim-component-simple-blood-flow/: Cargo.toml
mortalsim-component-simple-blood-flow/src/: lib.rs  test.rs
mortalsim-core/: Cargo.toml  LICENSE-MIT  README.md
mortalsim-core/src/: id_gen.rs  lib.rs  math.rs  quantity.rs  quantity_wrapper.rs  util.rs
mortalsim-core/src/event/: infection.rs  mod.rs  vital.rs  wound.rs
mortalsim-core/src/hub/: event_hub.rs  event_listener.rs  event_transformer.rs
mortalsim-core/src/sim/: impl_sim.rs  mod.rs  sim.rs  sim_state.rs  time_manager.rs
mortalsim-core/src/sim/component/: factory.rs  mod.rs
mortalsim-core/src/sim/layer/: layer_manager.rs
mortalsim-core/src/sim/layer/circulation/: circulation_layer.rs  vessel.rs
mortalsim-core/src/sim/layer/circulation/component/: connector.rs  initializer.rs  mod.rs
mortalsim-core/src/sim/layer/core/: core_layer.rs  mod.rs
mortalsim-core/src/sim/layer/core/component/: connector.rs  initializer.rs  mod.rs
mortalsim-core/src/sim/layer/digestion/: consumable.rs  consumed.rs  digestion_layer.rs
mortalsim-core/src/sim/layer/digestion/component/: connector.rs  mod.rs
mortalsim-core/src/sim/layer/nervous/: mod.rs  nerve.rs  nerve_signal.rs  nervous_layer.rs  transform.rs
mortalsim-core/src/sim/layer/nervous/component/: connector.rs  initializer.rs  mod.rs
mortalsim-core/src/sim/organism/: impl_sim.rs  mod.rs
mortalsim-core/src/sim/organism/human/: human_nervous.rs
mortalsim-core/src/sim/organism/test/: mod.rs  test_anatomy.rs  test_circulation.rs  test_nervous.rs
mortalsim-core/src/spark/: mod.rs
mortalsim-core/src/substance/: change.rs  concentration_tracker.rs  store.rs  substance.rs  substance_wrapper.rs
mortalsim-core/src/util/: mod.rs  version.rs
mortalsim-core/tests/: organism.rs
mortalsim-human/: Cargo.toml
mortalsim-human/src/: human_anatomy.rs  human_circulation.rs  human_nervous.rs  lib.rs
mortalsim-macros/: Cargo.toml
mortalsim-macros/src/: lib.rs
mortalsim-macros/src/macros/: mod.rs  param_enum.rs
mortalsim-math-routines/: Cargo.toml
mortalsim-math-routines/src/: lib.rs  ode.rs  params.rs
mortalsim-math-routines/tests/: van_der_pal.rs
mortalsim-simple-blood-flow/: Cargo.toml
mortalsim-simple-blood-flow/src/: lib.rs
mortalsim-smith2004-cvs-human/: Cargo.toml
mortalsim-smith2004-cvs-human/src/: lib.rs  model.rs  params.rs
mortalsim-smith2004-cvs-human/tests/: cvs.rs
mortalsim-test-harness/: Cargo.toml
mortalsim-test-harness/src/: blood_checker.rs  charts.rs  lib.rs
scripts/: anatomy_writer.js  circulation_writer.js  nerve_writer.js  nervous_writer.js  package-lock.json  package.json  registry_generator.js  substance_writer.js
src/: lib.rs  substance.rs
src/blood/: blood_manager.rs  circulation.rs  graph.rs  manager.rs  mod.rs  util.rs  vessel.rs
src/blood/closed_circulation/: graph.rs  manager.rs  mod.rs  organism.rs  system.rs
src/blood/closed_circulation/component/: connector.rs  initializer.rs  mod.rs
src/closed_circulation/: graph.rs  mod.rs  sim.rs  system.rs  vessel.rs
src/closed_circulation/component/: connector.rs  initializer.rs  mod.rs
src/closed_circulation/module/: initializer.rs  mod.rs
src/core/: event_hub.rs  event_listener.rs  event_transformer.rs  id_gen.rs  mod.rs  time_manager.rs
src/core/event/: event_hub.rs  event_listener.rs  event_transformer.rs  mod.rs  time_manager.rs
src/core/hub/: event_hub.rs  event_listener.rs  event_transformer.rs  mod.rs
src/core/plugin/: bioconnector.rs  mod.rs
src/core/sim/: extension.rs  mod.rs  organism.rs  sim.rs  sim_state.rs  time_manager.rs
src/core/sim/component/: connector.rs  initializer.rs  mod.rs
src/core/sim/module/: connector.rs  initializer.rs  mod.rs
src/event/: blood_events.rs  mod.rs  vital.rs  wound.rs
src/hub/: event_hub.rs  event_listener.rs  event_transformer.rs  mod.rs
src/human/: circulation.rs  mod.rs  sim.rs
src/human/component/: connector.rs  initializer.rs  mod.rs
src/human/module/: connector.rs  mod.rs
src/sim/: mod.rs  sim.rs  sim_state.rs  time_manager.rs
src/sim/component/: factory.rs  mod.rs  registry.rs  wrapper.rs
src/sim/component/wrapper/: closed_circulation.rs  core.rs  digestion.rs  empty_wrapper.rs  human.rs  mod.rs  nervous.rs
src/sim/component/wrapper_ol/: circulation.rs  core.rs  digestion.rs  empty_wrapper.rs  mod.rs  nervous.rs
src/sim/human/: anatomy.rs  circulation.rs  human_circulation.rs  mod.rs  sim.rs
src/sim/human/module/: connector.rs  initializer.rs  mod.rs
src/sim/layer/: layer_manager.rs  layer_processor.rs  mod.rs
src/sim/layer/circulation/: circulation_layer.rs  mod.rs  vessel.rs
src/sim/layer/circulation/component/: connector.rs  initializer.rs  mod.rs
src/sim/layer/closed_circulation/: closed_circulation_layer.rs  graph.rs  mod.rs  sim.rs  system.rs  vessel.rs
src/sim/layer/closed_circulation/component/: connector.rs  (+2 more)
src/sim/layer/core/: core_layer.rs  mod.rs
src/sim/layer/digestion/: consumable.rs  consumed.rs  digestion_layer.rs  mod.rs
src/sim/layer/nervous/: mod.rs  nerve.rs  nerve_signal.rs  nervous_layer.rs  transform.rs
src/sim/organism/: generic.rs  impl_sim.rs  macros.rs  mod.rs
src/sim/organism/human/: human_anatomy.rs  human_circulation.rs  human_nervous.rs  mod.rs  sim.rs
src/sim/organism/test/: mod.rs  test_circulation.rs  test_nervous.rs
src/sim/system/core/: mod.rs  sim.rs
src/spark/: mod.rs
src/substance/: change.rs  concentration_tracker.rs  mod.rs  store.rs  substance.rs  substance_store.rs  substance_wrapper.rs
src/units/: mod.rs
src/util/: id_gen.rs  math.rs  mod.rs  quantity_wrapper.rs  version.rs
(+22 files in other folders)
