[workspace]
resolver = "2"

members = [
    "mortalsim",
    "mortalsim-core",
    "mortalsim-human",
    "mortalsim-macros",
    "mortalsim-math-routines",
    "mortalsim-simple-blood-flow",
    "mortalsim-smith2004-cvs-human",
    "mortalsim-test-harness",
]

[workspace.package]
rust-version = "1.76"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mortalsim/mortalsim"
authors = ["Ryan Sivek <developer@ryansivek.com>"]
