[package]
name = "mortalsim-core"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mortalsim/mortalsim"
authors = ["Ryan Sivek <developer@ryansivek.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
downcast-rs = "1.2.0"
log = "0.4"
ordered-float = "3.7"
strum = "0.26.1"
strum_macros = "0.26.1"
either = "1.8"
simple-si-units = "1.1"
rand = "0.8.5"

[dev-dependencies]
simple_logger = "1.11.0"
