[package]
name = "mortalsim-core"
version = "0.1.0"
description = "MortalSim core simulation library"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0"
downcast-rs = "1.2.0"
log = "0.4"
ordered-float = "3.7"
strum = "0.26.1"
strum_macros = "0.26.1"
either = "1.8"
simple-si-units = "1.1"
rand = "0.8.5"

[dev-dependencies]
simple_logger = "1.11.0"
