[package]
name = "mortalsim-human"
version = "0.1.0"
authors = ["Ryan Sivek <developer@ryansivek.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mortalsim-core = { path = "../mortalsim-core" }
anyhow = "1.0"
strum = "0.26.1"
strum_macros = "0.26.1"
log = "0.4"

[dev-dependencies]
simple_logger = "1.11.0"
