[package]
name = "mortalsim-human"
version = "0.1.0"
description = "MortalSim Human"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
mortalsim-core = { path = "../mortalsim-core", version="0.1.0" }
anyhow = "1.0"
strum = "0.26.1"
strum_macros = "0.26.1"
log = "0.4"

[dev-dependencies]
simple_logger = "1.11.0"
