[package]
name = "mortalsim-macros"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
proc-macro = true
name = "mortalsim_macros"

[dependencies]
proc-macro2 = "1.0"
syn = "2.0"
quote = "1.0"
