[package]
name = "mortalsim-math-routines"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies.mathru]
version = "0.15"

[dev-dependencies]
mortalsim-macros = { path = "../mortalsim-macros", version = "0.1.0" }
plotters = "0.3"
