[package]
name = "mortalsim-simple-blood-flow"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mortalsim/mortalsim"
authors = ["Ryan Sivek <developer@ryansivek.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mortalsim-core = { path = "../mortalsim-core" }
mortalsim-human = { path = "../mortalsim-human" }
log = "0.4"

[dev-dependencies]
rand = ">=0.8.5"
test-log = ">=0.2"
