[package]
name = "mortalsim-simple-blood-flow"
version = "0.1.0"
description = "MortalSim module for simple closed circulation flow of blood concentrations"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
mortalsim-core = { path = "../mortalsim-core", version="0.1.0" }
mortalsim-human = { path = "../mortalsim-human", version="0.1.0"  }
log = "0.4"

[dev-dependencies]
rand = ">=0.8.5"
test-log = ">=0.2"
