[package]
name = "mortalsim-test-harness"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
mortalsim-core = { path = "../mortalsim-core", version="0.1.0" }
mortalsim-math-routines = { path = "../mortalsim-math-routines", version = "0.1.0" }
plotters = "0.3"
log = "0.4"
